<resources>
    <string name="app_name">AcceleroMeter Data Filter</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="how_much_data_will_be_shown_in_graph">How much data will be shown in Graph</string>
    <string name="graph_length">Graph Length</string>
    <string name="give_polynomial_order_for_sgolay_filter">Give Polynomial order for SGolay filter</string>
    <string name="polynomial_order">Polynomial Order</string>
    <string name="give_the_window_size_for_sgolay_filter">Give the window size for SGolay filter</string>
    <string name="window_size">Window size</string>
    <string name="show_normalized_data_and_its_normalf_data">Show Normalized data and its normalf data</string>
    <string name="normalized_data">Normalized data</string>
    <string name="show_z_axis_and_its_normalf_data">Show Z-axis and its normalf data</string>
    <string name="z_axis">Z-axis</string>
    <string name="show_y_axis_and_its_normalf_data">Show Y-axis and its normalf data</string>
    <string name="y_axis">Y-axis</string>
    <string name="show_x_axis_and_its_normalf_data">Show X-axis and its normalf data</string>
    <string name="x_axis">X-axis</string>
    <string name="save">Save</string>
</resources>
